deploy: 10b804fccd6257d922505d8d7c7180fbbe9f5b69

--- a/begrippen-per-onderdeel.html
+++ b/begrippen-per-onderdeel.html
@@ -38,6 +38,7 @@
 <li><p>Bovenbalk</p></li>
 <li><p>Dash</p></li>
 <li><p>Desktop manager</p></li>
+<li><p>GNOME</p></li>
 <li><p>Notificatie venster</p></li>
 <li><p>Super toets</p></li>
 <li><p>Systeemmenu</p></li>
@@ -53,8 +54,28 @@
 <li><p>Zoekvak</p></li>
 </ul>
 <h2 id="firefox">Firefox</h2>
-<h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
+<ul>
+<li><p>Adresbalk</p></li>
+<li><p>Context menu</p></li>
+<li><p>Focus</p></li>
+<li><p>Hamburgermenu</p></li>
+</ul>
+<h2 id="bestanden">Bestanden</h2>
+<ul>
+<li><p>Actiemenu</p></li>
+<li><p>Adresbalk</p></li>
+<li><p>Bestandsbeheerder</p></li>
+<li><p>Context menu</p></li>
+<li><p>Filesystem Hierarchy Standard</p></li>
+<li><p>Hamburgermenu</p></li>
+<li><p>Pad</p></li>
+<li><p>Thuismap</p></li>
+</ul>
 <h2 id="vensters-en-werkbladen">Vensters en werkbladen</h2>
+<ul>
+<li><p>Activiteiten modus</p></li>
+<li><p>Werkbladen</p></li>
+</ul>
 <h2 id="instellingen">Instellingen</h2>
 <h2 id="toepassingen-installeren">Toepassingen installeren</h2>
 </body>
