--- a/index.html
+++ b/index.html
@@ -78,14 +78,14 @@
 </tbody>
 </table>
 <h3 id="presentaties">Presentaties</h3>
-<table>
+<table style="width:100%;">
 <colgroup>
 <col style="width: 7%" />
-<col style="width: 12%" />
-<col style="width: 23%" />
-<col style="width: 23%" />
-<col style="width: 14%" />
-<col style="width: 18%" />
+<col style="width: 28%" />
+<col style="width: 17%" />
+<col style="width: 17%" />
+<col style="width: 15%" />
+<col style="width: 13%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -127,24 +127,24 @@
 <td><a href="firefox.html">Firefox</a></td>
 <td><a href="oefeningen.html#firefox">Oefeningen</a></td>
 <td><a href="samenvatting.html#firefox">Samenvatting</a></td>
-<td></td>
-<td></td>
+<td><a href="begrippen-per-onderdeel.html#firefox">Begrippen</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#firefox">Sneltoetsen</a></td>
 </tr>
 <tr class="odd">
 <td>5</td>
 <td><a href="bestanden.html">Bestanden</a></td>
 <td><a href="oefeningen.html#bestanden">Oefeningen</a></td>
 <td><a href="samenvatting.html#bestanden">Samenvatting</a></td>
-<td></td>
-<td></td>
+<td><a href="begrippen-per-onderdeel.html#bestanden">Begrippen</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#bestanden">Sneltoetsen</a></td>
 </tr>
 <tr class="even">
 <td>6</td>
 <td><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></td>
 <td><a href="oefeningen.html#vensters-en-werkbladen">Oefeningen</a></td>
 <td><a href="samenvatting.html#vensters-en-werkbladen">Samenvatting</a></td>
-<td></td>
-<td></td>
+<td><a href="begrippen-per-onderdeel.html#vensters-en-werkbladen">Begrippen</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#vensters-en-werkbladen">Sneltoetsen</a></td>
 </tr>
 <tr class="odd">
 <td>7</td>
