--- a/sneltoetsen-per-onderdeel.html
+++ b/sneltoetsen-per-onderdeel.html
@@ -148,8 +148,278 @@
 </tbody>
 </table>
 <h2 id="firefox">Firefox</h2>
-<h2 id="bestandsbeheerder">Bestandsbeheerder</h2>
+<table>
+<thead>
+<tr class="header">
+<th>Sneltoets</th>
+<th>Functie</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><code>SUPER+1</code></td>
+<td>Firefox</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+T</code></td>
+<td>Nieuw tabblad openen</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+W</code></td>
+<td>Tabblad sluiten</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+L</code></td>
+<td>Focus naar adresbalk</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+K</code></td>
+<td>Zoeken</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+↓</code></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+↑</code></td>
+<td>zoekmachine te selecteren</td>
+</tr>
+<tr class="even">
+<td><code>ALT+↓</code></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><code>ALT+↑</code></td>
+<td>zoekmachine te selecteren als u al iets ingetyped hebt</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+SHIFT+Click</code></td>
+<td>open koppeling op nieuw tabblad en ga naar dat tabblad</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+Click</code></td>
+<td>open koppeling op nieuw tabblad</td>
+</tr>
+<tr class="even">
+<td><code>CLTR+TAB</code></td>
+<td>Wissel tussen tabbladen</td>
+</tr>
+<tr class="odd">
+<td><code>CLTR+SHIFT+TAB</code></td>
+<td>Wissel tussen tabbladen (omgekeerde volgorde)</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+D</code></td>
+<td>Bladwijzer maken</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+SHIFT+O</code></td>
+<td>Bladwijzers organiseren</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+N</code></td>
+<td>Nieuw venster openen</td>
+</tr>
+<tr class="odd">
+<td><code>ALT+F4</code></td>
+<td>Venster sluiten</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+Q</code></td>
+<td>Toepassing afsluiten</td>
+</tr>
+</tbody>
+</table>
+<h2 id="bestanden">Bestanden</h2>
+<table>
+<thead>
+<tr class="header">
+<th>Sneltoets</th>
+<th>Functie</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><code>SUPER+E</code></td>
+<td></td>
+</tr>
+<tr class="even">
+<td><code>SUPER+4</code></td>
+<td>Bestandsbeheerder</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+L</code></td>
+<td>Focus naar adresbalk</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+1</code></td>
+<td>Lijstweergave</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+2</code></td>
+<td>Rasterweergave</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+H</code></td>
+<td>Verborgen bestanden tonen/verbergen</td>
+</tr>
+<tr class="odd">
+<td><code>F10</code></td>
+<td>Actiemenu openen</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+SHIFT+N</code></td>
+<td>Nieuwe map maken</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+X</code></td>
+<td>Knippen</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+C</code></td>
+<td>Kopiëren</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+V</code></td>
+<td>Plakken</td>
+</tr>
+<tr class="even">
+<td><code>DELETE</code></td>
+<td>Naar de prullenbak verplaatsen</td>
+</tr>
+<tr class="odd">
+<td><code>ALT+ENTER</code></td>
+<td>Eigenschappen</td>
+</tr>
+<tr class="even">
+<td><code>ALT+↑</code></td>
+<td>Ga naar bovenliggende map</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+F</code></td>
+<td>Zoeken</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+D</code></td>
+<td>Bladwijzer maken</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+N</code></td>
+<td>Nieuw venster openen</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+W</code></td>
+<td></td>
+</tr>
+<tr class="odd">
+<td><code>ALT+F4</code></td>
+<td>Venster sluiten</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+Q</code></td>
+<td>Toepassing afsluiten</td>
+</tr>
+<tr class="odd">
+<td><code>F1</code></td>
+<td>Hulp</td>
+</tr>
+<tr class="even">
+<td><code>CTRL+SHIFT+?</code></td>
+<td>Sneltoetsen tonen</td>
+</tr>
+</tbody>
+</table>
 <h2 id="vensters-en-werkbladen">Vensters en werkbladen</h2>
+<table>
+<colgroup>
+<col style="width: 55%" />
+<col style="width: 45%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th>Sneltoets</th>
+<th>Functie</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><code>ALT+TAB</code></td>
+<td></td>
+</tr>
+<tr class="even">
+<td><code>SUPER+TAB</code></td>
+<td>Wisselen tussen geopende toepassingen</td>
+</tr>
+<tr class="odd">
+<td><code>ALT+`</code> (alt backtick)</td>
+<td>Wisselen tussen open vensters van de toepassing die nu de focus heeft</td>
+</tr>
+<tr class="even">
+<td><code>ALT+ESC</code></td>
+<td>Wisselen tussen vensters op actieve werkblad</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER+PageDown</code></td>
+<td>Schakel naar werkblad rechts</td>
+</tr>
+<tr class="even">
+<td><code>SUPER+PageUp</code></td>
+<td>Schakel naar werkblad links</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER+SHIFT+PageDown</code></td>
+<td>Venster meenemen naar werkblad rechts</td>
+</tr>
+<tr class="even">
+<td><code>SUPER+SHIFT+PageUp</code></td>
+<td>Venster meenemen naar werkblad links</td>
+</tr>
+<tr class="odd">
+<td><code>ALT+CTRL+TAB</code></td>
+<td>Focus bovenbalk</td>
+</tr>
+<tr class="even">
+<td><code>ALT+SPATIEBALK</code></td>
+<td>Vensterbeheermenu openen</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER+↑</code></td>
+<td>Maximaliseren</td>
+</tr>
+<tr class="even">
+<td><code>SUPER+↓</code></td>
+<td>Herstellen</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER+H</code></td>
+<td>Minimaliseren</td>
+</tr>
+<tr class="even">
+<td><code>SUPER+←</code></td>
+<td>Linker helft van het scherm gebruiken</td>
+</tr>
+<tr class="odd">
+<td><code>SUPER+→</code></td>
+<td>Rechter helft van het scherm gebruiken</td>
+</tr>
+<tr class="even">
+<td><code>ALT+F7</code>/<code>ALT+F8</code></td>
+<td>Verplaatsen/Grootte wijzigen</td>
+</tr>
+<tr class="odd">
+<td><code>←↑↓→</code></td>
+<td>Verplaatsen/Grootte wijzingen</td>
+</tr>
+<tr class="even">
+<td><code>SHIFT+←↑↓→</code></td>
+<td>Naar de randen</td>
+</tr>
+<tr class="odd">
+<td><code>CTRL+←↑↓→</code></td>
+<td>Kleine stap</td>
+</tr>
+</tbody>
+</table>
 <h2 id="instellingen">Instellingen</h2>
 <h2 id="toepassingen-installeren">Toepassingen installeren</h2>
 </body>
