deploy: 8049f1005d11276d5c1d8c97d436eae08ba29f88

--- a/begrippen-per-onderdeel.html
+++ b/begrippen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">donderdag 21 maart 2024</p>
+<p class="date">maandag 25 maart 2024</p>
 </header>
 <h2 id="inleiding">Inleiding</h2>
 <ul>
@@ -77,6 +77,14 @@
 <li><p>Werkbladen</p></li>
 </ul>
 <h2 id="instellingen">Instellingen</h2>
+<ul>
+<li><p>Systeemmenu</p></li>
+<li><p>Zoekvak</p></li>
+</ul>
 <h2 id="toepassingen-installeren">Toepassingen installeren</h2>
+<ul>
+<li><p>Bestandsbeheerder</p></li>
+<li><p>Context menu</p></li>
+</ul>
 </body>
 </html>
