--- a/index.html
+++ b/index.html
@@ -36,41 +36,46 @@
 </thead>
 <tbody>
 <tr class="odd">
+<td>Hoe de cursus te volgen</td>
+<td><a href="hoe-de-cursus-te-volgen.html">HTML versie</a></td>
+<td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/hoe-de-cursus-te-volgen.pdf">Printbare versie</a></td>
+</tr>
+<tr class="even">
 <td>Presentaties</td>
 <td><a href="#presentaties">HTML versie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/presentatie.zip">Zipbestand</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Samenvatting</td>
 <td><a href="samenvatting.html">HMTL versie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">Printbare versie</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Oefeningen</td>
 <td><a href="oefeningen.html">HMTL versie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">Printbare versie</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Begrippenlijst</td>
 <td><a href="begrippen.html">HMTL versie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">Printbare versie</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Begrippen per onderdeel</td>
 <td><a href="begrippen-per-onderdeel.html">HMTL versie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen-per-onderdeel.pdf">Printbare versie</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Sneltoetsen kaart</td>
 <td></td>
 <td><a href="https://github.com/slspeek/debian-gnome-sneltoetsen/releases/latest/download/debian-gnome-sneltoetsen.pdf">Printbare versie</a></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td>Sneltoetsen per onderdeel</td>
 <td><a href="sneltoetsen-per-onderdeel.html">HMTL versie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/sneltoetsen-per-onderdeel.pdf">Printbare versie</a></td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td>Verder leren</td>
 <td><a href="verder-leren.html">HTML versie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/verder-leren.pdf">Printbare versie</a></td>
@@ -151,16 +156,16 @@
 <td><a href="instellingen.html">Instellingen</a></td>
 <td><a href="oefeningen.html#instellingen">Oefeningen</a></td>
 <td><a href="samenvatting.html#instellingen">Samenvatting</a></td>
-<td></td>
-<td></td>
+<td><a href="begrippen-per-onderdeel.html#instellingen">Begrippen</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#instellingen">Sneltoetsen</a></td>
 </tr>
 <tr class="even">
 <td>8</td>
 <td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
 <td><a href="oefeningen.html#toepassingen-installeren">Oefeningen</a></td>
 <td><a href="samenvatting.html#toepassingen-installeren">Samenvatting</a></td>
-<td></td>
-<td></td>
+<td><a href="begrippen-per-onderdeel.html#toepassingen-installeren">Begrippen</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#toepassingen-installeren">Sneltoetsen</a></td>
 </tr>
 </tbody>
 </table>
