--- a/sneltoetsen-per-onderdeel.html
+++ b/sneltoetsen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Sneltoetsen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">donderdag 21 maart 2024</p>
+<p class="date">maandag 25 maart 2024</p>
 </header>
 <h2 id="rondleiding-gnome">Rondleiding GNOME</h2>
 <table>
@@ -332,8 +332,8 @@
 <h2 id="vensters-en-werkbladen">Vensters en werkbladen</h2>
 <table>
 <colgroup>
-<col style="width: 55%" />
-<col style="width: 45%" />
+<col style="width: 35%" />
+<col style="width: 64%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -421,6 +421,89 @@
 </tbody>
 </table>
 <h2 id="instellingen">Instellingen</h2>
+<table>
+<thead>
+<tr class="header">
+<th>Sneltoets</th>
+<th>Functie</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><code>SUPER+I</code></td>
+<td>Instellingen</td>
+</tr>
+<tr class="even">
+<td><code>COMPOSE ' e</code></td>
+<td>é</td>
+</tr>
+<tr class="odd">
+<td><code>COMPOSE ` e</code></td>
+<td>è</td>
+</tr>
+<tr class="even">
+<td><code>COMPOSE " e</code></td>
+<td>ë</td>
+</tr>
+<tr class="odd">
+<td><code>COMPOSE - e</code></td>
+<td>ē</td>
+</tr>
+<tr class="even">
+<td><code>COMPOSE ^ e</code></td>
+<td>ê</td>
+</tr>
+</tbody>
+</table>
+<p>Via zoekvak:</p>
+<table>
+<thead>
+<tr class="header">
+<th style="text-align: center;">Teken</th>
+<th style="text-align: left;">Naam</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: center;">é</td>
+<td style="text-align: left;">Acute</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">è</td>
+<td style="text-align: left;">Grave</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">ë</td>
+<td style="text-align: left;">Diaeresis</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">ē</td>
+<td style="text-align: left;">Macron</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">ê</td>
+<td style="text-align: left;">Circumflex</td>
+</tr>
+</tbody>
+</table>
 <h2 id="toepassingen-installeren">Toepassingen installeren</h2>
+<table>
+<thead>
+<tr class="header">
+<th>Sneltoets</th>
+<th>Functie</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><code>SUPER+5</code></td>
+<td>Software</td>
+</tr>
+<tr class="even">
+<td><code>SHIFT+SUPER+I</code></td>
+<td>Afstellingen</td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
