--- a/toepassingen-installeren.html
+++ b/toepassingen-installeren.html
@@ -145,7 +145,7 @@
 
 <ul>
 <li>
-<p>Open Afstellingen (<code>SUPER+SHIFT+I</code> )</p>
+<p>Open Afstellingen (<code>SHIFT+SUPER+I</code> )</p>
 </li>
 <li>
 <p>&quot;Opstarttoepassingen&quot;</p>
