deploy: 83e8db12cb2989f2fa20b552a231119532f71475

--- a/begrippen-per-onderdeel.html
+++ b/begrippen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 25 maart 2024</p>
+<p class="date">dinsdag 26 maart 2024</p>
 </header>
 <h2 id="inleiding">Inleiding</h2>
 <ul>
