--- a/oefeningen.html
+++ b/oefeningen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Oefeningen voor de Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 25 maart 2024</p>
+<p class="date">dinsdag 26 maart 2024</p>
 </header>
 <h2 id="notatie">Notatie</h2>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
@@ -1481,11 +1481,11 @@
 <li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
 <li><p>Open samenvatting.pdf opnieuw met behulp van het zoekvak door <code>SUPER samenva ENTER</code></p></li>
 <li><p>U ziet dat “samenvatting.pdf” weer met xpdf wordt geopend</p></li>
-<li><p>U sluit xpdf door <code>Q</code> in te drukken</p></li>
+<li><p>U sluit xpdf door <code>ALT+F4</code> in te drukken</p></li>
 <li><p>Open de bestandsbeheerder met <code>SUPER+4</code></p></li>
 <li><p>Ga naar “Downloads” met de bladwijzer in het linker paneel</p></li>
 <li><p>Open het contextmenu van “samenvatting.pdf” (Selecteer “samenvatting.pdf” en druk <code>MENU</code>)</p></li>
-<li><p>Kies “Openen met…” <code>M</code></p></li>
+<li><p>Kies “Openen met…”</p></li>
 <li><p>Selecteer “Documentweergave”</p></li>
 <li><p>Zet de knop “Altijd gebruiken voor dit bestandstype” om zodat die blauw kleurt</p></li>
 <li><p>Klik op de blauwe knop “Openen”</p></li>
