--- a/hoe-de-cursus-te-volgen.html
+++ b/hoe-de-cursus-te-volgen.html
@@ -23,164 +23,13 @@
 <header id="title-block-header">
 <h1 class="title">Hoe de Linux beginners cursus te volgen</h1>
 <p class="author">Steven Speek</p>
-<p class="date">dinsdag 26 maart 2024</p>
+<p class="date">dinsdag 2 april 2024</p>
 </header>
 <h2 id="oefeningen-maken">Oefeningen maken</h2>
 <p>Er zijn twee typen vragen bij de oefeningen, namelijk instructies om een scenario uit te voeren en open vragen. De scenario’s moet u uitvoeren en de antwoorden op de open vragen moet u opschrijven.</p>
 <h2 id="huiswerk">Huiswerk</h2>
 <p>Het huiswerk zal u ongeveer één tot twee uur per les kosten. Maak hier tijd voor vrij in uw agenda.</p>
 <ol type="1">
-<li><p>Maak <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf"><em>oefeningen</em></a> die u in de les niet afkrijgt thuis af. U kunt tussendoor contact over e-mail opnemen als u vast zit.</p>
-<table>
-<thead>
-<tr class="header">
-<th>Les</th>
-<th>Presentatie</th>
-<th>Oefeningen</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>1</td>
-<td><a href="inleiding.html">Inleiding</a></td>
-<td><a href="oefeningen.html#inleiding">Oefeningen</a></td>
-</tr>
-<tr class="even">
-<td>2</td>
-<td><a href="rondleiding-gnome.html">Rondleiding GNOME</a></td>
-<td><a href="oefeningen.html#rondleiding-gnome">Oefeningen</a></td>
-</tr>
-<tr class="odd">
-<td>3</td>
-<td><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></td>
-<td><a href="oefeningen.html#toepassingen-starten-en-afsluiten">Oefeningen</a></td>
-</tr>
-<tr class="even">
-<td>4</td>
-<td><a href="firefox.html">Firefox</a></td>
-<td><a href="oefeningen.html#firefox">Oefeningen</a></td>
-</tr>
-<tr class="odd">
-<td>5</td>
-<td><a href="bestanden.html">Bestanden</a></td>
-<td><a href="oefeningen.html#bestanden">Oefeningen</a></td>
-</tr>
-<tr class="even">
-<td>6</td>
-<td><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></td>
-<td><a href="oefeningen.html#vensters-en-werkbladen">Oefeningen</a></td>
-</tr>
-<tr class="odd">
-<td>7</td>
-<td><a href="instellingen.html">Instellingen</a></td>
-<td><a href="oefeningen.html#instellingen">Oefeningen</a></td>
-</tr>
-<tr class="even">
-<td>8</td>
-<td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
-<td><a href="oefeningen.html#toepassingen-installeren">Oefeningen</a></td>
-</tr>
-</tbody>
-</table></li>
-<li><p>Zoek de <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf"><em>begrippen</em></a> per onderdeel na iedere les op de <a href="begrippen.html">begrippen</a> en leer ze uit uw hoofd.</p>
-<table>
-<thead>
-<tr class="header">
-<th>Les</th>
-<th>Presentatie</th>
-<th>Begrippen</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>1</td>
-<td><a href="inleiding.html">Inleiding</a></td>
-<td><a href="begrippen-per-onderdeel.html#inleiding">Begrippen</a></td>
-</tr>
-<tr class="even">
-<td>2</td>
-<td><a href="rondleiding-gnome.html">Rondleiding GNOME</a></td>
-<td><a href="begrippen-per-onderdeel.html#rondleiding-gnome">Begrippen</a></td>
-</tr>
-<tr class="odd">
-<td>3</td>
-<td><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></td>
-<td><a href="begrippen-per-onderdeel.html#toepassingen-starten-en-afsluiten">Begrippen</a></td>
-</tr>
-<tr class="even">
-<td>4</td>
-<td><a href="firefox.html">Firefox</a></td>
-<td><a href="begrippen-per-onderdeel.html#firefox">Begrippen</a></td>
-</tr>
-<tr class="odd">
-<td>5</td>
-<td><a href="bestanden.html">Bestanden</a></td>
-<td><a href="begrippen-per-onderdeel.html#bestanden">Begrippen</a></td>
-</tr>
-<tr class="even">
-<td>6</td>
-<td><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></td>
-<td><a href="begrippen-per-onderdeel.html#vensters-en-werkbladen">Begrippen</a></td>
-</tr>
-<tr class="odd">
-<td>7</td>
-<td><a href="instellingen.html">Instellingen</a></td>
-<td><a href="begrippen-per-onderdeel.html#instellingen">Begrippen</a></td>
-</tr>
-<tr class="even">
-<td>8</td>
-<td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
-<td><a href="begrippen-per-onderdeel.html#toepassingen-installeren">Begrippen</a></td>
-</tr>
-</tbody>
-</table></li>
-<li><p>Leer de <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/sneltoetsen-per-onderdeel.pdf"><em>sneltoetsen</em></a> per onderdeel na iedere les uit uw hoofd.</p>
-<table>
-<thead>
-<tr class="header">
-<th>Les</th>
-<th>Presentatie</th>
-<th>Sneltoetsen</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>2</td>
-<td><a href="rondleiding-gnome.html">Rondleiding GNOME</a></td>
-<td><a href="sneltoetsen-per-onderdeel.html#rondleiding-gnome">Sneltoetsen</a></td>
-</tr>
-<tr class="even">
-<td>3</td>
-<td><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></td>
-<td><a href="sneltoetsen-per-onderdeel.html#toepassingen-starten-en-afsluiten">Sneltoetsen</a></td>
-</tr>
-<tr class="odd">
-<td>4</td>
-<td><a href="firefox.html">Firefox</a></td>
-<td><a href="sneltoetsen-per-onderdeel.html#firefox">Sneltoetsen</a></td>
-</tr>
-<tr class="even">
-<td>5</td>
-<td><a href="bestanden.html">Bestanden</a></td>
-<td><a href="sneltoetsen-per-onderdeel.html#bestanden">Sneltoetsen</a></td>
-</tr>
-<tr class="odd">
-<td>6</td>
-<td><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></td>
-<td><a href="sneltoetsen-per-onderdeel.html#vensters-en-werkbladen">Sneltoetsen</a></td>
-</tr>
-<tr class="even">
-<td>7</td>
-<td><a href="instellingen.html">Instellingen</a></td>
-<td><a href="sneltoetsen-per-onderdeel.html#instellingen">Sneltoetsen</a></td>
-</tr>
-<tr class="odd">
-<td>8</td>
-<td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
-<td><a href="sneltoetsen-per-onderdeel.html#toepassingen-installeren">Sneltoetsen</a></td>
-</tr>
-</tbody>
-</table></li>
 <li><p>Lees de <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf"><em>samenvatting</em></a> van de laatste les door.</p>
 <table>
 <thead>
@@ -273,6 +122,157 @@
 <tr class="even">
 <td>8</td>
 <td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
+</tr>
+</tbody>
+</table></li>
+<li><p>Zoek de <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf"><em>begrippen</em></a> per onderdeel na iedere les op de <a href="begrippen.html">begrippen</a> en leer ze uit uw hoofd.</p>
+<table>
+<thead>
+<tr class="header">
+<th>Les</th>
+<th>Presentatie</th>
+<th>Begrippen</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td><a href="inleiding.html">Inleiding</a></td>
+<td><a href="begrippen-per-onderdeel.html#inleiding">Begrippen</a></td>
+</tr>
+<tr class="even">
+<td>2</td>
+<td><a href="rondleiding-gnome.html">Rondleiding GNOME</a></td>
+<td><a href="begrippen-per-onderdeel.html#rondleiding-gnome">Begrippen</a></td>
+</tr>
+<tr class="odd">
+<td>3</td>
+<td><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></td>
+<td><a href="begrippen-per-onderdeel.html#toepassingen-starten-en-afsluiten">Begrippen</a></td>
+</tr>
+<tr class="even">
+<td>4</td>
+<td><a href="firefox.html">Firefox</a></td>
+<td><a href="begrippen-per-onderdeel.html#firefox">Begrippen</a></td>
+</tr>
+<tr class="odd">
+<td>5</td>
+<td><a href="bestanden.html">Bestanden</a></td>
+<td><a href="begrippen-per-onderdeel.html#bestanden">Begrippen</a></td>
+</tr>
+<tr class="even">
+<td>6</td>
+<td><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></td>
+<td><a href="begrippen-per-onderdeel.html#vensters-en-werkbladen">Begrippen</a></td>
+</tr>
+<tr class="odd">
+<td>7</td>
+<td><a href="instellingen.html">Instellingen</a></td>
+<td><a href="begrippen-per-onderdeel.html#instellingen">Begrippen</a></td>
+</tr>
+<tr class="even">
+<td>8</td>
+<td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
+<td><a href="begrippen-per-onderdeel.html#toepassingen-installeren">Begrippen</a></td>
+</tr>
+</tbody>
+</table></li>
+<li><p>Maak <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf"><em>oefeningen</em></a> die u in de les niet afkrijgt thuis af. U kunt tussendoor contact over e-mail opnemen als u vast zit.</p>
+<table>
+<thead>
+<tr class="header">
+<th>Les</th>
+<th>Presentatie</th>
+<th>Oefeningen</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>1</td>
+<td><a href="inleiding.html">Inleiding</a></td>
+<td><a href="oefeningen.html#inleiding">Oefeningen</a></td>
+</tr>
+<tr class="even">
+<td>2</td>
+<td><a href="rondleiding-gnome.html">Rondleiding GNOME</a></td>
+<td><a href="oefeningen.html#rondleiding-gnome">Oefeningen</a></td>
+</tr>
+<tr class="odd">
+<td>3</td>
+<td><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></td>
+<td><a href="oefeningen.html#toepassingen-starten-en-afsluiten">Oefeningen</a></td>
+</tr>
+<tr class="even">
+<td>4</td>
+<td><a href="firefox.html">Firefox</a></td>
+<td><a href="oefeningen.html#firefox">Oefeningen</a></td>
+</tr>
+<tr class="odd">
+<td>5</td>
+<td><a href="bestanden.html">Bestanden</a></td>
+<td><a href="oefeningen.html#bestanden">Oefeningen</a></td>
+</tr>
+<tr class="even">
+<td>6</td>
+<td><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></td>
+<td><a href="oefeningen.html#vensters-en-werkbladen">Oefeningen</a></td>
+</tr>
+<tr class="odd">
+<td>7</td>
+<td><a href="instellingen.html">Instellingen</a></td>
+<td><a href="oefeningen.html#instellingen">Oefeningen</a></td>
+</tr>
+<tr class="even">
+<td>8</td>
+<td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
+<td><a href="oefeningen.html#toepassingen-installeren">Oefeningen</a></td>
+</tr>
+</tbody>
+</table></li>
+<li><p>Leer de <a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/sneltoetsen-per-onderdeel.pdf"><em>sneltoetsen</em></a> per onderdeel na iedere les uit uw hoofd.</p>
+<table>
+<thead>
+<tr class="header">
+<th>Les</th>
+<th>Presentatie</th>
+<th>Sneltoetsen</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>2</td>
+<td><a href="rondleiding-gnome.html">Rondleiding GNOME</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#rondleiding-gnome">Sneltoetsen</a></td>
+</tr>
+<tr class="even">
+<td>3</td>
+<td><a href="toepassingen-starten-en-afsluiten.html">Toepassingen starten en afsluiten</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#toepassingen-starten-en-afsluiten">Sneltoetsen</a></td>
+</tr>
+<tr class="odd">
+<td>4</td>
+<td><a href="firefox.html">Firefox</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#firefox">Sneltoetsen</a></td>
+</tr>
+<tr class="even">
+<td>5</td>
+<td><a href="bestanden.html">Bestanden</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#bestanden">Sneltoetsen</a></td>
+</tr>
+<tr class="odd">
+<td>6</td>
+<td><a href="vensters-en-werkbladen.html">Vensters en werkbladen</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#vensters-en-werkbladen">Sneltoetsen</a></td>
+</tr>
+<tr class="even">
+<td>7</td>
+<td><a href="instellingen.html">Instellingen</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#instellingen">Sneltoetsen</a></td>
+</tr>
+<tr class="odd">
+<td>8</td>
+<td><a href="toepassingen-installeren.html">Toepassingen installeren</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html#toepassingen-installeren">Sneltoetsen</a></td>
 </tr>
 </tbody>
 </table></li>
