--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
 <tbody>
 <tr class="odd">
 <td>Hoe de cursus te volgen</td>
-<td><a href="hoe-de-cursus-te-volgen.html">HTML versie</a></td>
+<td><a href="hoe-de-cursus-te-volgen.html">Webversie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/hoe-de-cursus-te-volgen.pdf">Printbare versie</a></td>
 </tr>
 <tr class="even">
 <td>Presentaties</td>
-<td><a href="#presentaties">HTML versie</a></td>
+<td><a href="#presentaties">Webversie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/presentatie.zip">Zipbestand</a></td>
 </tr>
 <tr class="odd">
@@ -77,7 +77,7 @@
 </tr>
 <tr class="odd">
 <td>Verder leren</td>
-<td><a href="verder-leren.html">HTML versie</a></td>
+<td><a href="verder-leren.html">Webversie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/verder-leren.pdf">Printbare versie</a></td>
 </tr>
 </tbody>
