--- a/firefox.html
+++ b/firefox.html
@@ -59,6 +59,12 @@
 </ul>
 </li>
 <li>
+<p>Volledig scherm <code>F11</code></p>
+</li>
+<li>
+<p>Navigatiegeschiedenis <code>CTRL+H</code></p>
+</li>
+<li>
 <p>Nieuw venster <code>CTRL+N</code></p>
 </li>
 <li>
@@ -168,9 +174,21 @@
 <h6 id="voorbeeld-bladwijzer-verwijderen-van-de-bladwijzerbalk-met-het-context-menu">Voorbeeld bladwijzer verwijderen van de bladwijzerbalk met het context menu</h6>
 <p><img src="img/firefox-bladwijzer-verwijderen-uit-map.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-theme="gaia" style="--theme:gaia;">
-<h5 id="bladwijzers-beheren-in-firefox">Bladwijzers beheren in Firefox</h5>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/firefox-bibliotheek.png&quot;);background-size:100% auto;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="16" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
+<h5 id="bladwijzers-beheren">Bladwijzers beheren</h5>
+
 <ul>
+<li>
+<p>venster heet 'Bibliotheek'</p>
+<ul>
+<li>
+<p>hamburgermenu <img src="img/firefox-hamburgermenu.png" alt="" style="width:50px;" /> &quot;Bladwijzers &gt;&quot; &quot;Bladwijzers beheren&quot;</p>
+</li>
+<li>
+<p><code>CTRL+SHIFT+O</code></p>
+</li>
+</ul>
+</li>
 <li>
 <p>origaniseren van bladwijzers</p>
 <ul>
@@ -182,20 +200,9 @@
 </li>
 </ul>
 </li>
-<li>
-<p>te bereiken met</p>
-<ul>
-<li>
-<p>hamburgermenu <img src="img/firefox-hamburgermenu.png" alt="" style="width:50px;" /> &quot;Bladwijzers &gt;&quot; &quot;Bladwijzers beheren&quot;</p>
-</li>
-<li>
-<p><code>CTRL+SHIFT+O</code></p>
-</li>
-</ul>
-</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-theme="gaia" style="--theme:gaia;">
+</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-theme="gaia" style="--theme:gaia;">
 <h6 id="voorbeeld-bladwijzers-beheren-een-bladwijzer-verwijderen">Voorbeeld bladwijzers beheren, een bladwijzer verwijderen</h6>
 <p><img src="img/firefox-bladwijzers-beheren-verwijderen.gif" alt="" style="width:1000px;" /></p>
 </section>
