--- a/oefeningen.html
+++ b/oefeningen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Oefeningen voor de Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">dinsdag 16 april 2024</p>
+<p class="date">maandag 22 april 2024</p>
 </header>
 <h2 id="notatie">Notatie</h2>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
@@ -398,7 +398,7 @@
 <ul>
 <li><p>Ga naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a>.</p></li>
 <li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
-<li><p>Klik op de koppeling van de HTML versie (tweede kolom) van “Presentaties”</p></li>
+<li><p>Klik op de koppeling van de Webversie (tweede kolom) van “Presentaties”</p></li>
 <li><p>Blader door enkele presentaties heen, nu weet u waar u het lesmateriaal online kunt vinden</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
@@ -414,7 +414,7 @@
 <ul>
 <li><p>Ga naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a></p></li>
 <li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
-<li><p>Open de HTML versie (tweede kolom) van Samenvatting en Oefeningen op een apart tabblad (en blijf op de eerste pagina)</p></li>
+<li><p>Open de Webversie van de Samenvatting en de Oefeningen op een apart tabblad (en blijf op de eerste pagina), door <code>CTRL</code> in gedrukt te houden terwijl u op de koppelingen van de Webversie (tweede kolom) van de Samenvatting en de Oefeningen klikt</p></li>
 <li><p>Gebruik <code>CTRL+TAB</code> om de twee nieuwe pagina’s te bekijken</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
@@ -435,14 +435,14 @@
 <ul>
 <li><p>Ga met behulp van de bladwijzer naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a> (“Linux beginners cursus”)</p></li>
 <li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
-<li><p>Klik op de koppeling van de HTML versie van “Verder leren” (tweede kolom)</p></li>
+<li><p>Klik op de koppeling van de Webversie van “Verder leren” (tweede kolom)</p></li>
 <li><p>Maak een bladwijzer door op <img src="img/firefox-bladwijzer-ster-leeg.png" width="30" /> aan de rechterzijde te klikken</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
 <li><p>Ga met behulp van de bladwijzer naar de URL <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a> (“Linux beginners cursus”)</p></li>
-<li><p>Klik op de HTML versie van “Samenvatting” onder het kopje “Lesmateriaal”</p></li>
+<li><p>Klik op de Webversie van “Samenvatting” onder het kopje “Lesmateriaal”</p></li>
 <li><p>Maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</p></li>
 <li><p>Maak een bladwijzer door <img src="img/firefox-slotje.png" width="30" /> naar de bladwijzerbalk te slepen</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
@@ -459,7 +459,7 @@
 <ul>
 <li><p>Ga met behulp van de bladwijzer naar de URL <a href="https://slspeek.github.io/linux-beginners-cursus"><code>slspeek.github.io/linux-beginners-cursus</code></a> (“Linux beginners cursus”)</p></li>
 <li><p>Ga naar het kopje “Lesmateriaal”</p></li>
-<li><p>Klik met <code>CTRL</code> ingedrukt op de HTML versies van “Oefeningen” en “Begrippenlijst”</p></li>
+<li><p>Klik met <code>CTRL</code> ingedrukt op de Webversies van “Oefeningen” en “Begrippenlijst”</p></li>
 <li><p>Als de bladwijzerbalk niet zichtbaar is maakt u hem zichtbaar met <code>SHIFT+CTRL+B</code></p></li>
 <li><p>Breng met behulp van <code>CTRL+TAB</code> de tabbladen 1 voor 1 naar voren en sleep <img src="img/firefox-slotje.png" width="30" /> naar de map “cursus” op de bladwijzerbalk</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
@@ -491,7 +491,7 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus/samenvatting.html#internet-browser-firefox"><code>slspeek.github.io/linux-beginners-cursus/samenvatting.html#internet-browser-firefox</code></a>.</p></li>
+<li><p>Ga naar de URL: <a href="https://slspeek.github.io/linux-beginners-cursus/samenvatting.html#firefox"><code>slspeek.github.io/linux-beginners-cursus/samenvatting.html#firefox</code></a>.</p></li>
 <li><p>Scroll omlaag naar “Extensies installeren”, klik op de koppeling van “I don’t care about cookies”</p></li>
 <li><p>Klik op de knop “Toevoegen aan Firefox”</p></li>
 <li><p>Ga na met <code>CTRL+SHIFT+A</code> (Add-ons) of de extensie is geïnstalleerd</p></li>
