deploy: 64548ad839fc0836f05f528bac90acb047be6d17

--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
 </tr>
 <tr class="odd">
 <td>Samenvatting</td>
-<td><a href="samenvatting.html">HMTL versie</a></td>
+<td><a href="samenvatting.html">Webversie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/samenvatting.pdf">Printbare versie</a></td>
 </tr>
 <tr class="even">
 <td>Oefeningen</td>
-<td><a href="oefeningen.html">HMTL versie</a></td>
+<td><a href="oefeningen.html">Webversie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/oefeningen.pdf">Printbare versie</a></td>
 </tr>
 <tr class="odd">
 <td>Begrippenlijst</td>
-<td><a href="begrippen.html">HMTL versie</a></td>
+<td><a href="begrippen.html">Webversie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen.pdf">Printbare versie</a></td>
 </tr>
 <tr class="even">
 <td>Begrippen per onderdeel</td>
-<td><a href="begrippen-per-onderdeel.html">HMTL versie</a></td>
+<td><a href="begrippen-per-onderdeel.html">Webversie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/begrippen-per-onderdeel.pdf">Printbare versie</a></td>
 </tr>
 <tr class="odd">
@@ -72,7 +72,7 @@
 </tr>
 <tr class="even">
 <td>Sneltoetsen per onderdeel</td>
-<td><a href="sneltoetsen-per-onderdeel.html">HMTL versie</a></td>
+<td><a href="sneltoetsen-per-onderdeel.html">Webversie</a></td>
 <td><a href="https://github.com/slspeek/linux-beginners-cursus/releases/latest/download/sneltoetsen-per-onderdeel.pdf">Printbare versie</a></td>
 </tr>
 <tr class="odd">
