deploy: 538c02de58d3979e9946cca11e5f0e6194031d7b

--- a/begrippen.html
+++ b/begrippen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippenlijst voor Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 22 april 2024</p>
+<p class="date">dinsdag 14 mei 2024</p>
 </header>
 <dl>
 <dt>Actiemenu</dt>
@@ -172,7 +172,7 @@
 </figure>
 <dl>
 <dt>Thuismap</dt>
-<dd><p>De gebruikers map. Hier worden documenten en afbeeldingen opgeslagen. De gebruiker van wie de thuismap is kan hier zelf mappen aanmaken. Bijvoorbeeld <code>/home/tux</code>. Zie <a href="https://nl.wikipedia.org/wiki/Homedirectory">online-documentatie</a>.</p>
+<dd><p>De gebruikers map. In de bestandsbeheerder wordt deze ‘Persoonlijke map’ genoemd. Hier worden documenten en afbeeldingen van de gebruiker opgeslagen. De gebruiker van wie de thuismap is kan hier zelf mappen aanmaken. Bijvoorbeeld <code>/home/tux</code>. Zie <a href="https://nl.wikipedia.org/wiki/Homedirectory">online-documentatie</a>.</p>
 </dd>
 <dt>Titelbalk</dt>
 <dd><p>De balk aan de bovenkant van een venster, met rechts het <img src="img/kruisje-in-titelbalk-van-toepassing.png" /> om het venster te sluiten.</p>
