--- a/oefeningen.html
+++ b/oefeningen.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Oefeningen voor de Linux beginners cursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 22 april 2024</p>
+<p class="date">dinsdag 14 mei 2024</p>
 </header>
 <h2 id="notatie">Notatie</h2>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
@@ -899,7 +899,7 @@
 <li><p>Ga activiteiten modus in met <code>SUPER</code></p></li>
 <li><p>Druk <code>ALT+CTRL+[TAB*]</code> (<code>[TAB*]</code> betekent hier 1 of meer keer <code>TAB</code>)</p>
 <ul>
-<li><p>Houdt met de rechterhand <code>CTRL</code> ingedrukt</p></li>
+<li><p>Houdt met de rechterhand de rechter <code>CTRL</code> ingedrukt</p></li>
 <li><p>Met de linkerhand <code>ALT+[TAB*]</code></p></li>
 </ul></li>
 <li><p>Noem de verschillende componenten op (vijf stuks) waar de focus naar toe kan</p></li>
@@ -1046,6 +1046,7 @@
 <li><p>Grootte van LibreOffice writer venster aanpassen de met muis</p>
 <ul>
 <li><p>Open writer met <code>SUPER+3</code></p></li>
+<li><p>Indien het venster gemaximaliseerd (het hele scherm gebruikt), herstelt u het met <code>SUPER+↓</code></p></li>
 <li><p>Ga na door de muis nauwkeurig boven de hoeken van het venster te bewegen dat u de volgende cursors kunt krijgen <img src="img/resize-cursors/top_left_corner.png" width="25" /> <img src="img/resize-cursors/top_right_corner.png" width="25" /> <img src="img/resize-cursors/bottom_right_corner.png" width="25" /> <img src="img/resize-cursors/bottom_left_corner.png" width="25" /></p></li>
 <li><p>Ga na door de muis nauwkeurig boven de randen van het venster te bewegen dat u de volgende cursors kunt krijgen <img src="img/resize-cursors/left_side.png" width="25" /> <img src="img/resize-cursors/right_side.png" width="25" /> <img src="img/resize-cursors/top_side.png" width="25" /> <img src="img/resize-cursors/bottom_side.png" width="25" /></p></li>
 <li><p>Merk op dat dit best iets vraagt van de fijne motoriek</p></li>
@@ -1054,6 +1055,7 @@
 <li><p>Grootte van Firefox aanpassen via het venstermenu en muis.</p>
 <ul>
 <li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Indien het venster gemaximaliseerd (het hele scherm gebruikt), herstelt u het met <code>SUPER+↓</code></p></li>
 <li><p>Open het venstermenu met <code>ALT+SPATIEBALK</code></p></li>
 <li><p>Druk viermaal <code>↓</code> gevolgd door <code>SPATIEBALK</code></p></li>
 <li><p>Beweeg nu de muis richting één van de hoeken om één van deze cursors te krijgen <img src="img/resize-cursors/top_left_corner.png" width="25" /> <img src="img/resize-cursors/top_right_corner.png" width="25" /> <img src="img/resize-cursors/bottom_right_corner.png" width="25" /> <img src="img/resize-cursors/bottom_left_corner.png" width="25" /> (<em>Hint</em>: Druk <code>ESC</code> als het fout gaat en ga opnieuw grootte aanpas modus in met <code>ALT+F8</code>). Zorg dat alle vier de richtingen hebt geoefend.</p></li>
@@ -1063,6 +1065,7 @@
 <li><p>Grootte van Firefox aanpassen met sneltoetsen</p>
 <ul>
 <li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Indien het venster gemaximaliseerd (het hele scherm gebruikt), herstelt u het met <code>SUPER+↓</code></p></li>
 <li><p>Ga grootte aanpas modus in met <code>ALT+F8</code></p></li>
 <li><p>Gebruik de pijltjes om de grootte aan te passen. Wat kunt u zeggen over wat het eerste pijltje doet wat u indrukt? Gebruik <code>ENTER</code> om de nieuwe grootte te accepteren.</p></li>
 <li><p>Hoe had u de nieuwe grootte kunnen annuleren? Probeer dit uit.</p></li>
@@ -1071,6 +1074,7 @@
 <li><p>Grootte van Firefox aanpassen met grote stappen met sneltoetsen</p>
 <ul>
 <li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Indien het venster gemaximaliseerd (het hele scherm gebruikt), herstelt u het met <code>SUPER+↓</code></p></li>
 <li><p>Ga grootte aanpas modus in met <code>ALT+F8</code></p></li>
 <li><p>Gebruik de <code>SHIFT</code> met de pijltjes om de grootte aan te passen. Gebruik <code>ENTER</code> om de nieuwe grootte te accepteren.</p></li>
 <li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
@@ -1078,6 +1082,7 @@
 <li><p>Grootte van Firefox aanpassen per pixel met sneltoetsen</p>
 <ul>
 <li><p>Open Firefox met <code>SUPER+1</code></p></li>
+<li><p>Indien het venster gemaximaliseerd (het hele scherm gebruikt), herstelt u het met <code>SUPER+↓</code></p></li>
 <li><p>Ga grootte aanpas modus in met <code>ALT+F8</code></p></li>
 <li><p>Gebruik de pijltjes om de grootte aan te passen. Gebruik nu <code>CTRL</code> met de pijltjes om het venster per pixel te vergroten of verkleinen. Gebruik <code>ENTER</code> om de nieuwe grootte te accepteren.</p></li>
 <li><p>Sluit Firefox met <code>ALT+F4</code></p></li>
