--- a/vensters-en-werkbladen.html
+++ b/vensters-en-werkbladen.html
@@ -38,7 +38,7 @@
 <p><code>ALT+` </code> (alt backtick) wisselt tussen open vensters van de toepassing die nu de focus heeft</p>
 </li>
 <li>
-<p>Wisselen tussen vensters op actieve werkblad <code>ALT+ESC</code></p>
+<p>Wisselen tussen vensters op het zichtbare werkblad <code>ALT+ESC</code></p>
 </li>
 <li>
 <p>Focus bovenbalk <code>ALT+CTRL+TAB</code></p>
