--- a/begrippen-per-onderdeel.html
+++ b/begrippen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">maandag 22 april 2024</p>
+<p class="date">dinsdag 14 mei 2024</p>
 </header>
 <h2 id="inleiding">Inleiding</h2>
 <ul>
