--- a/instellingen.html
+++ b/instellingen.html
@@ -49,16 +49,34 @@
 <li>
 <p><code>SUPER inst ENTER</code></p>
 </li>
+<li>
+<p>Met het zoekvak om direct naar een specifiek onderdeel te gaan:</p>
+<ul>
+<li>
+<p><code>SUPER weergave ↓ ENTER</code> om Weergave te openen</p>
+</li>
+<li>
+<p><code>SUPER snelhoek ENTER</code> om Multitasking te openen</p>
+</li>
+<li>
+<p><code>SUPER online ENTER</code> om Online accounts te openen</p>
+</li>
+</ul>
+</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="3" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/instellingen-weergave-stijl.png&quot;);background-size:100% auto;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="3" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <h2 id="donker-thema-inschakelen">Donker thema inschakelen</h2>
 <ul>
-<li>Instellingen -&gt; Weergave -&gt; Stijl -&gt; Donker</li>
+<li>
+<p>Systeemmenu</p>
+</li>
+<li>
+<p>Instellingen -&gt; Weergave -&gt; Stijl -&gt; Donker</p>
+</li>
 </ul>
-<p><img src="img/instellingen-weergave-stijl.png" alt="" style="width:800px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-theme="gaia" style="--theme:gaia;">
+</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-donker-thema-inschakelen">Voorbeeld donker thema inschakelen</h5>
 <p><img src="img/instellingen-donker-thema.gif" alt="" style="width:1000px;" /></p>
 </section>
