deploy: aa55f70ff18cfa140602a455c3ddce7b58996c3a

--- a/firefox.html
+++ b/firefox.html
@@ -39,6 +39,9 @@
 <p>Tabblad sluiten <code>CTRL+W</code></p>
 </li>
 <li>
+<p>Gesloten tabblad opnieuw openen <code>CTRL+SHIFT+T</code></p>
+</li>
+<li>
 <p>Focus naar adresbalk <code>CTRL+L</code> (locatie)</p>
 </li>
 </ul>
