--- a/sneltoetsen-per-onderdeel.html
+++ b/sneltoetsen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Sneltoetsen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">donderdag 16 mei 2024</p>
+<p class="date">donderdag 30 mei 2024</p>
 </header>
 <h2 id="rondleiding-gnome">Rondleiding GNOME</h2>
 <table>
@@ -165,66 +165,70 @@
 <td>Nieuw tabblad openen</td>
 </tr>
 <tr class="odd">
+<td><code>CTRL+SHIFT+T</code></td>
+<td>Gesloten tabblad heropenen</td>
+</tr>
+<tr class="even">
 <td><code>CTRL+W</code></td>
 <td>Tabblad sluiten</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>CTRL+L</code></td>
 <td>Focus naar adresbalk</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>CTRL+K</code></td>
 <td>Zoeken</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>CTRL+↓</code></td>
 <td></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>CTRL+↑</code></td>
 <td>zoekmachine te selecteren</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>ALT+↓</code></td>
 <td></td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>ALT+↑</code></td>
 <td>zoekmachine te selecteren als u al iets ingetyped hebt</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>CTRL+SHIFT+Click</code></td>
 <td>open koppeling op nieuw tabblad en ga naar dat tabblad</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>CTRL+Click</code></td>
 <td>open koppeling op nieuw tabblad</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>CLTR+TAB</code></td>
 <td>Wissel tussen tabbladen</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>CLTR+SHIFT+TAB</code></td>
 <td>Wissel tussen tabbladen (omgekeerde volgorde)</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>CTRL+D</code></td>
 <td>Bladwijzer maken</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>CTRL+SHIFT+O</code></td>
 <td>Bladwijzers organiseren</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>CTRL+N</code></td>
 <td>Nieuw venster openen</td>
 </tr>
-<tr class="odd">
+<tr class="even">
 <td><code>ALT+F4</code></td>
 <td>Venster sluiten</td>
 </tr>
-<tr class="even">
+<tr class="odd">
 <td><code>CTRL+Q</code></td>
 <td>Toepassing afsluiten</td>
 </tr>
