--- a/toepassingen-installeren.html
+++ b/toepassingen-installeren.html
@@ -16,15 +16,10 @@
 <p>Updates uitvoeren</p>
 </li>
 <li>
+<p>Alternatief zoeken</p>
+</li>
+<li>
 <p>Installeren</p>
-<ul>
-<li>
-<p>Software <img src="img/software-icon.png" alt="" /></p>
-</li>
-<li>
-<p>.deb bestand</p>
-</li>
-</ul>
 </li>
 </ul>
 </section>
@@ -47,7 +42,54 @@
 <p><img src="img/installeren-updates-uitvoeren.gif" alt="" style="width:1000px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="4" data-theme="gaia" style="--theme:gaia;">
+<h2 id="alternatief-zoeken">Alternatief zoeken</h2>
+<ul>
+<li>
+<p>Gebruik een zoekmachine (<code>SUPER+1</code> <code>CTRL+K</code>) met <code>linux alternative &lt;programma dat u zoekt&gt;</code></p>
+<ul>
+<li>
+<p><code>linux alternative photoshop</code> suggereert GIMP</p>
+</li>
+<li>
+<p><code>linux alternative moviemaker</code> suggereert Openshot</p>
+</li>
+</ul>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-theme="gaia" style="--theme:gaia;">
 <h2 id="installeren">Installeren</h2>
+<ul>
+<li>
+<p>Via zoekvak <img src="img/zoekvak.png" alt="" /></p>
+</li>
+<li>
+<p>Software <img src="img/software-icon.png" alt="" /></p>
+</li>
+<li>
+<p>.deb bestand</p>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-theme="gaia" style="--theme:gaia;">
+<h2 id="installeren-via-het-zoekvak">Installeren via het zoekvak</h2>
+<ul>
+<li>
+<p><code>SUPER</code> om in activiteiten modus te komen</p>
+</li>
+<li>
+<p>Type de naam van het programma dat u wilt installeren</p>
+<ul>
+<li>bv. <code>gimp</code> voor fotobewerkings programma <img src="img/installeren-zoekvak-gimp.png" alt="" style="width:1100px;" /></li>
+</ul>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-theme="gaia" style="--theme:gaia;">
+<h5 id="voorbeeld-openshot">Voorbeeld Openshot</h5>
+<p><img src="img/installeren-zoekvak-openshot.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-theme="gaia" style="--theme:gaia;">
 <h3 id="via-software">Via Software <img src="img/software-icon.png" alt="" /></h3>
 <ul>
 <li>
@@ -61,19 +103,19 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-bladeren-in-software">Voorbeeld bladeren in Software</h5>
 <p><img src="img/installeren-software-bladeren.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="10" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-zoeken-in-software">Voorbeeld zoeken in Software</h5>
 <p><img src="img/installeren-software-zoeken.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-installeren-in-software">Voorbeeld installeren in Software</h5>
 <p><img src="img/installeren-software-installeren.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="8" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="12" data-theme="gaia" style="--theme:gaia;">
 <h3 id="vanuit-een-deb-bestand">Vanuit een .deb bestand</h3>
 <ul>
 <li>
@@ -90,57 +132,57 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="9" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="13" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-downloaden-deb-bestand-voor-zoom">Voorbeeld downloaden .deb bestand voor Zoom</h5>
 <p><img src="img/installeren-deb-download-zoom.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="10" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="14" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-installeren-zoom-uit-deb-bestand">Voorbeeld installeren Zoom uit .deb bestand</h5>
 <p><img src="img/installeren-deb-zoom.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="15" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-google-chrome-deb-downloaden">Voorbeeld Google Chrome .deb downloaden</h5>
 <p><img src="img/google-chrome-01-search-download.png" alt="" style="width:800px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="12" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-theme="gaia" style="--theme:gaia;">
 <p><img src="img/google-chrome-02-google-search-download.png" alt="" style="width:950px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="13" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-theme="gaia" style="--theme:gaia;">
 <p><img src="img/google-chrome-03-download-page.png" alt="" style="width:950px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="14" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="18" data-theme="gaia" style="--theme:gaia;">
 <p><img src="img/google-chrome-04-choose-deb-or-rpm.png" alt="" style="width:950px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="15" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="19" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-google-chrome-uit-deb-installeren">Voorbeeld Google Chrome uit .deb installeren</h5>
 <p><img src="img/google-chrome-05-deb-in-downloads.png" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="20" data-theme="gaia" style="--theme:gaia;">
 <p><img src="img/google-chrome-06-deb-in-software.png" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="21" data-theme="gaia" style="--theme:gaia;">
 <p><img src="img/google-chrome-07-software-gereed.png" alt="" style="width:950px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="18" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="22" data-theme="gaia" style="--theme:gaia;">
 <h2 id="standaardtoepassingen">Standaardtoepassingen</h2>
 <p><img src="img/standaardtoepassingen.png" alt="" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="19" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="23" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-standaardtoepassing-web-aanpassen">Voorbeeld standaardtoepassing Web aanpassen</h5>
 <p><img src="img/installeren-standaard-toepassing-browser.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/bestanden-contextmenu-pdf-bestand.png&quot;);background-size:auto 100%;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="20" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/bestanden-contextmenu-pdf-bestand.png&quot;);background-size:auto 100%;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="24" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <h3 id="standaardtoepassing-per-bestandstype">Standaardtoepassing per bestandstype</h3>
 <p>Context menu -&gt; &quot;Openen met&quot;</p>
 </section>
-</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/bestanden-dialoogvenster-openen-met.png&quot;);background-size:auto 100%;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="21" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
+</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/bestanden-dialoogvenster-openen-met.png&quot;);background-size:auto 100%;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="25" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <p>Kies toepassing en zet schakelaar &quot;Altijd gebruiken voor dit bestandstype&quot;</p>
 </section>
-</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="22" data-theme="gaia" style="--theme:gaia;">
+</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="26" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-xpdf-in-plaats-van-document-weergave">Voorbeeld xpdf in plaats van &quot;Document weergave&quot;</h5>
 <p><img src="img/installeren-toepassing-per-type-pdf.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/opstarttoepassingen.png&quot;);background-size:100% auto;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="23" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="background" data-marpit-advanced-background-split="right"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;img/opstarttoepassingen.png&quot;);background-size:100% auto;"></figure></div></section></foreignObject><foreignObject width="50%" height="720"><section id="27" data-theme="gaia" style="--theme:gaia;--marpit-advanced-background-split:50%;" data-marpit-advanced-background="content" data-marpit-advanced-background-split="right">
 <h2 id="opstart-toepassingen"><a href="https://help.gnome.org/users/gnome-help/stable/shell-apps-auto-start.html.en"><em>Opstart toepassingen</em></a></h2>
 
 <ul>
@@ -152,7 +194,7 @@
 </li>
 </ul>
 </section>
-</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="24" data-theme="gaia" style="--theme:gaia;">
+</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="28" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-terminalvenster-als-opstarttoepassing">Voorbeeld terminalvenster als opstarttoepassing</h5>
 <p><img src="img/installeren-opstarttoepassing.gif" alt="" style="width:1000px;" /></p>
 </section>
