--- a/begrippen-per-onderdeel.html
+++ b/begrippen-per-onderdeel.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Begrippen per onderdeel</h1>
 <p class="author">Steven Speek</p>
-<p class="date">dinsdag 11 juni 2024</p>
+<p class="date">dinsdag 25 juni 2024</p>
 </header>
 <h2 id="inleiding">Inleiding</h2>
 <ul>
@@ -36,6 +36,7 @@
 <li><p>Activiteiten knop</p></li>
 <li><p>Applicatie modus</p></li>
 <li><p>Bovenbalk</p></li>
+<li><p>Context menu</p></li>
 <li><p>Dash</p></li>
 <li><p>Desktop manager</p></li>
 <li><p>GNOME</p></li>
