--- a/rondleiding-gnome.html
+++ b/rondleiding-gnome.html
@@ -167,36 +167,47 @@
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-theme="gaia" style="--theme:gaia;">
+<ul>
+<li>kunt u een programma van de dash losmaken door:
+<ul>
+<li>het naar de 3x3 puntjes rechts te slepen</li>
+<li>uit het context menu 'Losmaken' te kiezen<br />
+<img src="img/dash-toepassing-verwijderen.gif" alt="" style="width:840px;" /></li>
+</ul>
+</li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-theme="gaia" style="--theme:gaia;">
 <h3 id="met-de-dash-kunt-u">Met de dash kunt u</h3>
 <ul>
 <li>een programma openen door met de muis op het icon te klikken<br />
 <img src="img/dash-toepassing-openen.gif" alt="" style="width:880px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="18" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>een tweede venster van een programma openen door <code>CTRL</code> ingedrukt te houden terwijl u klikt<br />
 <img src="img/dash-tweede-venster-openen.gif" alt="" style="width:950px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="18" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="19" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>zien welke programma's geopend zijn door de punt onder het icon<br />
 <img src="img/dash-toont-geopende-programma_s.png" alt="" style="width:1000px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="19" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="20" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>applicatie modus binnen gaan door op de 3x3 puntjes aan de rechterzijde te klikken<br />
 <img src="img/dash-naar-applicatie-modus.gif" alt="" style="width:950px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="20" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="21" data-theme="gaia" style="--theme:gaia;">
 <h3 id="applicatie-modus">Applicatie modus</h3>
 <p>Is een onderdeel van activiteiten modus<br />
 <img src="img/applicatie-modus.png" alt="" style="width:850px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="21" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="22" data-theme="gaia" style="--theme:gaia;">
 <h3 id="u-gaat-applicatie-modus-binnen-door">U gaat applicatie modus binnen door</h3>
 <ul>
 <li>op de 3x3 puntjes aan de rechterzijde van de dash klikken als u in activiteiten modus bent</li>
@@ -206,7 +217,7 @@
 <li><code>SUPER+A</code> op het toetsenbord indrukken als u in normale modus bent</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="22" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="23" data-theme="gaia" style="--theme:gaia;">
 <h3 id="applicatie-modus-verlaat-u-door">Applicatie modus verlaat u door</h3>
 <ul>
 <li>op de 3x3 puntjes aan de rechterzijde van de dash te klikken om in activiteiten modus te blijven<br />
@@ -220,29 +231,23 @@
 <li><code>SUPER</code> in te drukken om naar normale modus te komen</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="23" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="24" data-theme="gaia" style="--theme:gaia;">
 <h3 id="in-applicatie-modus">In applicatie modus</h3>
 <ul>
 <li>kunt u een programma openen door erop te klikken of<br />
 <img src="img/applicatie-modus-toepassing-openen.gif" alt="" style="width:880px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="24" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="25" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>een programma slepen naar een werkblad om het te openen<br />
 <img src="img/slepen-in-applicatie-modus.gif" alt="" style="width:1000px;" /></li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="25" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="26" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>kunt u een programma toevoegen aan de dash<br />
 <img src="img/dash-toepassing-toevoegen.gif" alt="" style="width:1000px;" /></li>
-</ul>
-</section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="26" data-theme="gaia" style="--theme:gaia;">
-<ul>
-<li>kunt u een programma uit de dash verwijderen door het naar de 3x3 puntjes rechts te slepen<br />
-<img src="img/dash-toepassing-verwijderen.gif" alt="" style="width:960px;" /></li>
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="27" data-theme="gaia" style="--theme:gaia;">
@@ -348,6 +353,19 @@ bestaat uit</p>
 </ul>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="37" data-theme="gaia" style="--theme:gaia;">
+<h4 id="enkele-belangrijke-sneltoetsen">Enkele belangrijke sneltoetsen</h4>
+<ul>
+<li>navigeren
+<ul>
+<li><code>TAB</code> en <code>SHIFT+TAB</code></li>
+<li><code>→</code>, <code>←</code>, <code>↑</code> en <code>↓</code></li>
+</ul>
+</li>
+<li>selecteren, indrukken <code>SPATIEBALK</code></li>
+<li>bevestigen <code>ENTER</code></li>
+</ul>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="38" data-theme="gaia" style="--theme:gaia;">
 <h4 id="voorbeeld-1">Voorbeeld</h4>
 <p><img src="img/uitschakelen.gif" alt="" style="width:960px;" /></p>
 </section>
