--- a/samenvatting.html
+++ b/samenvatting.html
@@ -23,7 +23,7 @@
 <header id="title-block-header">
 <h1 class="title">Samenvatting voor de Linux beginnerscursus</h1>
 <p class="author">Steven Speek</p>
-<p class="date">dinsdag 11 juni 2024</p>
+<p class="date">dinsdag 25 juni 2024</p>
 </header>
 <h2 id="notatie">Notatie</h2>
 <p>Het lettertype <code>Courier</code> wordt gebruikt om iets op te schrijven dat u op het toetsenbord kunt typen. Uitzondering hierop zijn de volgende speciale toetsen: <code>SPATIEBALK</code>, <code>CTRL</code>, <code>ALT</code>, <code>SUPER</code>, <code>MENU</code>, <code>TAB</code>, <code>HOME</code>, <code>END</code>, <code>ESC</code>, <code>DELETE</code>, <code>PageDown</code>, <code>PageUp</code>, <code>PrintScreen</code>, <code>F1</code>, <code>F2</code> … en <code>ENTER</code>, hier dient u betreffende toets in te drukken in plaats van het woord in te typen.</p>
@@ -78,11 +78,6 @@
 <!-- ## Distributies
 
 ![width:300px](img/fedora-logo.png) ![width:300px](img/debian-logo.png) ![width:300px](img/ubuntu-logo.png) ![width:300px](img/knoppix-logo.gif) ![width:300px](img/opensuse-logo.png) ![width:300px](img/mint-logo.png) -->
-<h3 id="belang-van-vrije-software">Belang van vrije software</h3>
-<ul>
-<li>Met broncode kun je nagaan wat programmatuur doet</li>
-<li>Programmeurs en gebruikers zijn de baas over de programmatuur</li>
-</ul>
 <h3 id="belang-dat-u-vrije-software-gebruikt">Belang dat u vrije software gebruikt</h3>
 <ul>
 <li>Voorleven aan anderen dat het kan</li>
@@ -90,11 +85,15 @@
 </ul>
 <h3 id="voordelen-van-vrije-software">Voordelen van vrije software</h3>
 <ul>
-<li>Kosteloos</li>
-<li>Draait goed op oudere computers</li>
+<li>Programmeurs en gebruikers zijn de baas over de programmatuur
+<ul>
+<li>Software kan zomaar worden veranderd</li>
+</ul></li>
+<li>Met broncode kun je nagaan wat programmatuur doet</li>
 <li>Eenvoudige installatie van toepassingen</li>
+<li>Draait goed op oudere hardware</li>
 <li>Geen reclame of marketing in het systeem</li>
-<li>Veranderingen aan software die een belangrijk deel van de gebruikers niet aanstaan zal leiden tot een afsplitsing die hen wel behaagd</li>
+<li>Kosteloos</li>
 </ul>
 <h3 id="redenen-om-debian-te-gebruiken"><a href="https://www.debian.org/intro/why_debian"><em>Redenen om Debian te gebruiken</em></a></h3>
 <ul>
